// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`>>> components/base/shareChanges.tsx --- Snapshot +++ Should match snapshot when its less than an hour since last push and there are changes in the repo 1`] = `
<button
  className="MuiButtonBase-root MuiButton-root ShareChangesComponent-color_blueDark-5 ShareChangesComponent-btn-2 ShareChangesComponent-clickable-4 MuiButton-text"
  disabled={false}
  id="share_changes_button"
  onBlur={[Function]}
  onClick={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiButton-label"
  >
    <div
      className="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-center"
    >
      <div
        className="MuiGrid-root MuiGrid-item"
      >
        <i
          className="fa fa-upload"
          style={
            Object {
              "color": "#0062BA",
              "fontSize": 36,
              "fontWeight": 600,
              "margin": "0px -5px 0px -5px",
              "padding": null,
            }
          }
        />
      </div>
      <div
        className="MuiGrid-root MuiGrid-item"
      >
        <p
          className="MuiTypography-root ShareChangesComponent-color_blueDark-5 ShareChangesComponent-bold-1 MuiTypography-body1"
          id="changes_to_share_btn"
        >
          sync_header.changes_to_share
        </p>
      </div>
    </div>
  </span>
</button>
`;

exports[`>>> components/base/shareChanges.tsx --- Snapshot +++ Should match snapshot when its more than an hour since last push and there are changes in the repo 1`] = `
<button
  className="MuiButtonBase-root MuiButton-root ShareChangesComponent-color_blueDark-5 ShareChangesComponent-btn-2 ShareChangesComponent-clickable-4 MuiButton-text"
  disabled={false}
  id="share_changes_button"
  onBlur={[Function]}
  onClick={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiButton-label"
  >
    <div
      className="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-center"
    >
      <div
        className="MuiGrid-root MuiGrid-item"
      >
        <i
          className="fa fa-upload"
          style={
            Object {
              "color": "#0062BA",
              "fontSize": 36,
              "fontWeight": 600,
              "margin": "0px -5px 0px -5px",
              "padding": null,
            }
          }
        />
      </div>
      <div
        className="MuiGrid-root MuiGrid-item"
      >
        <p
          className="MuiTypography-root ShareChangesComponent-color_blueDark-5 ShareChangesComponent-bold-1 MuiTypography-body1"
          id="changes_to_share_btn"
        >
          sync_header.changes_to_share
        </p>
      </div>
    </div>
  </span>
</button>
`;

exports[`>>> components/base/shareChanges.tsx --- Snapshot +++ Should match snapshot when user has a mergeconflict 1`] = `
<button
  className="MuiButtonBase-root MuiButton-root ShareChangesComponent-color_blueDark-5 ShareChangesComponent-btn-2 ShareChangesComponent-clickable-4 MuiButton-text"
  disabled={false}
  id="share_changes_button"
  onBlur={[Function]}
  onClick={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiButton-label"
  >
    <div
      className="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-center"
    >
      <div
        className="MuiGrid-root MuiGrid-item"
      >
        <i
          className="fa fa-circlecancel"
          style={
            Object {
              "color": "#0062BA",
              "fontSize": null,
              "fontWeight": 600,
              "margin": "0px 5px 0px 0px",
              "padding": null,
            }
          }
        />
      </div>
      <div
        className="MuiGrid-root MuiGrid-item"
      >
        <p
          className="MuiTypography-root ShareChangesComponent-color_blueDark-5 ShareChangesComponent-bold-1 MuiTypography-body1"
        >
          sync_header.merge_conflict
        </p>
      </div>
    </div>
  </span>
</button>
`;

exports[`>>> components/base/shareChanges.tsx --- Snapshot +++ Should match snapshot when user has no changes in local repo 1`] = `
<button
  className="MuiButtonBase-root MuiButton-root ShareChangesComponent-color_blueDark-5 ShareChangesComponent-btn-2 ShareChangesComponent-clickable-4 MuiButton-text"
  disabled={false}
  id="share_changes_button"
  onBlur={[Function]}
  onClick={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiButton-label"
  >
    <div
      className="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-center"
    >
      <div
        className="MuiGrid-root MuiGrid-item"
      >
        <i
          className="fa fa-upload"
          style={
            Object {
              "color": "#0062BA",
              "fontSize": 36,
              "fontWeight": null,
              "margin": "0px -5px 0px -5px",
              "padding": null,
            }
          }
        />
      </div>
      <div
        className="MuiGrid-root MuiGrid-item"
      >
        <p
          className="MuiTypography-root ShareChangesComponent-color_blueDark-5 MuiTypography-body1"
          id="no_changes_to_share_btn"
        >
          sync_header.no_changes_to_share
        </p>
      </div>
    </div>
  </span>
</button>
`;

exports[`>>> components/base/shareChanges.tsx --- Snapshot +++ Should match snapshot when user only has read access to service 1`] = `
<button
  className="MuiButtonBase-root MuiButton-root ShareChangesComponent-color_blueDark-5 ShareChangesComponent-btn-2 ShareChangesComponent-clickable-4 MuiButton-text"
  disabled={false}
  id="share_changes_button"
  onBlur={[Function]}
  onClick={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiButton-label"
  >
    <div
      className="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-center"
    >
      <div
        className="MuiGrid-root MuiGrid-item"
      />
      <div
        className="MuiGrid-root MuiGrid-item"
      >
        <p
          className="MuiTypography-root ShareChangesComponent-color_blueDark-5 ShareChangesComponent-bold-1 MuiTypography-body1"
          id="changes_to_share_btn"
        >
          sync_header.changes_to_share
        </p>
      </div>
    </div>
  </span>
</button>
`;
